--- a/usecompi/bin/.gitignore
+++ b/usecompi/bin/.gitignore
@@ -1,5 +1,20 @@
 /.classpath_old
 /.classpath_20230311
+/.classpath_sabadell
+/.classpath_sitges
+/.gitignore
+/.project
+/AUTHORS
+/COPYING
+/ChangeLog
+/INSTALL
+/NEWS
+/README
+/README.OCL
+/build.xml
+/build/
+/classpath
+/etc/
 /examples/
 /images/
 /lib/
@@ -7,4 +22,3 @@
 /oclextensions/
 /src/
 /test/
-/build/
